# cfis-interfaces

./: README.md  publish.py  pyproject.toml  requirements.txt
examples/: multi_amptek_example.py
src/cfis_interfaces/: __init__.py
src/cfis_interfaces/amptek_mca/: README.md  __init__.py  amptek_mca.py  multi_amptek_mca.py
src/cfis_interfaces/amptek_mca/default/DP5/: FastSDD High Rate Default DP5.txt  FastSDD Low Energy Default DP5.txt  SDD High Rate Default DP5.txt  SiPIN Default DP5.txt  SiPIN Low Energy Default DP5.txt  SuperSDD High Rate Default DP5.txt
src/cfis_interfaces/amptek_mca/default/GammaRay/: DP5G NaI.txt  PX5 HPGe.txt
src/cfis_interfaces/amptek_mca/default/MCA8000D/: MCA8000D.txt  Option PA 1 V.txt  Option PA 10 V.txt
src/cfis_interfaces/amptek_mca/default/PX5/: CdTe High Energy PX5.txt  FastSDD High Rate Default PX5.txt  SDD Default PX5.txt
src/cfis_interfaces/amptek_px5/: README.md  amptek_px5.py
src/cfis_interfaces/amptek_px5/default/DP5/: CdTe Default DP5.txt  CdTe High Energy DP5.txt  FastSDD Default DP5.txt  SDD Default DP5.txt  SDD Low Energy Default DP5.txt  SuperSDD Default DP5.txt  SuperSDD Low Energy Default DP5.txt
src/cfis_interfaces/amptek_px5/default/GammaRay/: TB5 CeBr.txt
src/cfis_interfaces/amptek_px5/default/PX5/: CdTe Default PX5.txt  FastSDD Default PX5.txt  FastSDD Low Energy Default PX5.txt  SDD High Rate Default PX5.txt  SDD Low Energy Default PX5.txt  SiPIN Default PX5.txt  SiPIN Low Energy Default PX5.txt  SuperSDD Default PX5.txt  (+2 more)
src/cfis_interfaces/positioner/: README.md  positioner.py
